<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/background_primary">

    <!-- Top Image -->
    <ImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/background_login"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Semi-transparent overlay for darkening the image -->
    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-300dp"
        android:background="#80000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Rounded corner background -->
    <androidx.cardview.widget.CardView
        android:id="@+id/roundedBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-30dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/background_primary"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="50dp"
            android:background="@color/background_primary">

            <!-- Signup Text -->
            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_signup"
                android:textSize="24sp"
                android:padding="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/emphasize_dark"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <!-- Firstname Input -->
                <EditText
                    android:id="@+id/txt_firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_firstname"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="20dp"
                    android:paddingHorizontal="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="15sp"
                    android:paddingBottom="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="8dp"
                    android:singleLine="true"
                    android:autofillHints="name"
                    android:inputType="textPersonName"/>

                <!-- Firstname Input -->
                <EditText
                    android:id="@+id/txt_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_lastname"
                    android:paddingHorizontal="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="15sp"
                    android:paddingBottom="20dp"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:autofillHints="name"
                    android:inputType="textPersonName"/>
            </LinearLayout>


            <!-- Email Input -->
            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:paddingHorizontal="12dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"/>

            <!-- Password Input -->
            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawableStart="@drawable/ic_key"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="12dp"
                android:paddingBottom="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:autofillHints="password"/>

            <!-- Confirm Password Input -->
            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:drawableStart="@drawable/ic_key"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:paddingHorizontal="12dp"
                android:paddingBottom="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"/>

            <!-- Signup Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_grounded"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/btn_signup"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:backgroundTint="@null"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>