<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceryListActivity">

    <!-- ScrollView for Image and Content -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/background_primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background_primary">

            <!-- Top Image with Overlay -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/topImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/background_grocery"
                    android:scaleType="centerCrop" />

                <View
                    android:id="@+id/overlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80000000" />

                <!-- Add Task Box -->
                <LinearLayout
                    android:id="@+id/taskInputContainer"

                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_grounded"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/task_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Buy 5 Bananas"
                        android:hint="@string/task_name"
                        android:inputType="text"
                        android:paddingHorizontal="12dp"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/task_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Produce"
                        android:hint="@string/task_type"
                        android:inputType="text"
                        android:paddingHorizontal="12dp"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Add Item Button Centered Below Task Input Fields -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/taskInputContainer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_grounded"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="12sp"
                    android:text="@string/add_item"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="5dp"/>

                <!-- Back Button Overlay -->
                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_backward"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>

            <!-- Grocery List TextView -->
            <TextView
                android:id="@+id/txt_grocery_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/grocery_list"
                android:textColor="@color/emphasize_dark"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp" />

            <!-- Grocery List Items -->
            <LinearLayout
                android:id="@+id/task_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Navigation Menu -->
    <View
        android:id="@+id/top_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/emphasize_dark"
        app:layout_constraintBottom_toTopOf="@id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/background_primary"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="24dp"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/btn_favoriteDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="24dp"
            android:src="@drawable/ic_heart" />

        <ImageButton
            android:id="@+id/btn_mealPlanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="24dp"
            android:src="@drawable/ic_calendar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_groceryList"
            android:layout_width="84dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_grounded"
            android:drawableStart="@drawable/ic_list"
            android:drawableTint="@color/background_primary"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/background_primary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
